# cppdf

./: .gitignore  CMakeLists.txt  README.md  build.bash
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  main.cpp  rng.cpp  rng.h
src/dataframe/: CMakeLists.txt  dataframe.cpp
src/dataframe/include/: df.h
src/dataframe/include/dataframe/: dataframe.h  series.h
src/demo/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  tests.cpp
